--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
     </header> -->
 
     <main id="content" class="main-content" role="main">
+      <h1>GU combat log viewer</h1>
+      <hr />
       {{ content }}
 
       <footer class="site-footer">
