--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
     <main id="content" class="main-content" role="main">
       <h1>GU combat log viewer</h1>
+      <img src="../assets/screenshot.png" />
       <hr />
       {{ content }}
 
