--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,9 @@
 
     <main id="content" class="main-content" role="main">
       <h1>GU combat log viewer</h1>
-      <img src="../assets/screenshot.png" />
+      <h3 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h3>
+      
+      <img src="./assets/screenshot.png" />
       <hr />
       {{ content }}
 
