--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
-    <meta property="og:image" content="/assets/preview.png">
+    <meta property="og:image" content="https://thirdman.github.io/gulog/assets/preview.png">
     <meta property="og:title" content="GU Combat Log Viewer">
     <title>GU Combat Log Viewer</title>
   </head>
