--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include head-custom.html %}
     <meta property="og:image" content="https://thirdman.github.io/gulog/assets/preview.png">
     <meta property="og:title" content="GU Combat Log Viewer">
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GU Combat Log Viewer" />
     <meta name="twitter:image" content="https://thirdman.github.io/gulog/assets/preview.png" />
     <title>GU Combat Log Viewer</title>
