--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,13 @@
     <meta name="twitter:image" content="https://thirdman.github.io/gulog/assets/preview.png" />
     <title>GU Combat Log Viewer</title>
   </head>
+  <style>
+    body{
+      background: #e4f6fd;
+    }
+  </style>
   <body>
+  
 
     <!-- <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
