--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,11 @@
   </head>
   <style>
     body{
+      color: #0a4862;
       background: #e4f6fd;
+    }
+    h1, h3 {
+      color: #0a4862;
     }
   </style>
   <body>
