--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       color: #0a4862;
       background: #e4f6fd;
     }
-    h1, h3 {
+    .main-content h1, .main-content h3 {
       color: #0a4862;
     }
   </style>
