--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,19 @@
       color: #0a4862;
       background: #e4f6fd;
     }
-    .main-content h1, .main-content h3 {
+    .main-content h1{
+      color: #000;
+      font-size: 3rem;
+    }
+    .main-content h3 {
       color: #0a4862;
     }
     @media screen and (min-width: 42em){
     .main-content .preview-image{
       margin-left: -2rem;
+    }
+    .main-content hr{
+      background-color: rgba(0,0,0,.2);
     }
   }
   </style>
@@ -51,10 +58,12 @@
       <h1>GU combat log viewer</h1>
       <h3 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h3>
       
+      <hr />
       <img src="./assets/screenshot.png" class="preview-image" />
       <hr />
       {{ content }}
-
+      <hr />
+      
       <footer class="site-footer">
         <!-- {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
