oops forgot the div

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,9 @@
       }}</h3>
 
     <hr />
-    <img src="./assets/screenshot.png" class="preview-image" />
+    <div class="preview-image-wrap">
+      <img src="./assets/screenshot.png" class="preview-image" />
+    </div>
     <hr />
     {{ content }}
     <hr />
