--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,10 +40,10 @@
   }
 
   .preview-image-wrap {
-    border: 1px solid red;
+    /* border: 1px solid red;
     width: 500px;
     height: 300px;
-    overflow: hidden;
+    overflow: hidden; */
   }
 
   @media screen and (min-width: 42em) {
