--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,10 @@
 </head>
 <style>
   body {
-    color: #0a4862;
+    /* color: #0a4862; */
+    color: #222;
     background: #e4f6fd;
+    background: linear-gradient(-35deg, #d791be , #8ec0f9);
   }
 
   .main-content h1 {
@@ -34,7 +36,8 @@
   }
 
   .main-content h3 {
-    color: #0a4862;
+    /* color: #0a4862; */
+    color: #222;
     font-weight: 700;
     ;
   }
