--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,11 @@
     /* color: #0a4862; */
     color: #222;
     font-weight: 700;
-    ;
+    
+  }
+  .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{
+    margin-top: .5rem;
+    margin-bottom: .5rem;
   }
 
   .preview-image-wrap {
@@ -55,7 +59,8 @@
     }
 
     .main-content hr {
-      background-color: rgba(19, 79, 102, 0.18);
+      /* background-color: rgba(19, 79, 102, 0.18); */
+      background-color: rgba(0, 0, 0, 0.11);
       height: 1px;
     }
   }
